[gd_scene load_steps=4 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://data/SaveGame.gd" type="Script" id=2]
[ext_resource path="res://background.png" type="Texture" id=3]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -136.0
margin_right = 64.0
margin_bottom = 120.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/VBoxContainer"]
margin_top = 70.0
margin_right = 128.0
margin_bottom = 90.0

[node name="ContinueButton" type="Button" parent="TextureRect/VBoxContainer/MarginContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 128.0
margin_bottom = 20.0
text = "C O N T I N U E"

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/VBoxContainer"]
margin_top = 94.0
margin_right = 128.0
margin_bottom = 114.0

[node name="SaveButton" type="Button" parent="TextureRect/VBoxContainer/MarginContainer2"]
modulate = Color( 0, 0, 1, 1 )
margin_right = 128.0
margin_bottom = 20.0
text = "S A V E"

[node name="MarginContainer3" type="MarginContainer" parent="TextureRect/VBoxContainer"]
margin_top = 118.0
margin_right = 128.0
margin_bottom = 138.0

[node name="LoadButton" type="Button" parent="TextureRect/VBoxContainer/MarginContainer3"]
modulate = Color( 0, 1, 0, 1 )
margin_right = 128.0
margin_bottom = 20.0
text = "L O A D"

[node name="MarginContainer4" type="MarginContainer" parent="TextureRect/VBoxContainer"]
margin_top = 142.0
margin_right = 128.0
margin_bottom = 162.0

[node name="OptionsButton" type="Button" parent="TextureRect/VBoxContainer/MarginContainer4"]
modulate = Color( 1, 1, 0.0235294, 1 )
margin_right = 128.0
margin_bottom = 20.0
text = "O P T I O N S"

[node name="MarginContainer5" type="MarginContainer" parent="TextureRect/VBoxContainer"]
margin_top = 166.0
margin_right = 128.0
margin_bottom = 186.0

[node name="ExitButton" type="Button" parent="TextureRect/VBoxContainer/MarginContainer5"]
modulate = Color( 1, 0.0156863, 1, 1 )
margin_right = 128.0
margin_bottom = 20.0
text = "E X I T"

[connection signal="pressed" from="TextureRect/VBoxContainer/MarginContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/MarginContainer2/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/MarginContainer3/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/MarginContainer4/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/MarginContainer5/ExitButton" to="." method="_on_ExitButton_pressed"]
